--- a/package.json
+++ b/package.json
@@ -30,9 +30,14 @@
         "autoprefixer": "^10.0.1",
         "eslint": "^8",
         "eslint-config-next": "14.0.4",
+        "lint-staged": "^15.2.0",
         "postcss": "^8",
+        "prettier": "^3.2.4",
         "prettier-plugin-tailwindcss": "^0.5.11",
         "tailwindcss": "^3.3.0",
         "typescript": "^5"
+    },
+    "lint-staged": {
+        "**/*": "prettier --write --ignore-unknown"
     }
 }
