--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "start": "next start",
         "lint": "next lint",
         "prepare": "husky install",
-        "pre-commit": "npm run lint"
+        "format": "prettier . --write",
+        "pre-commit": "npm run format && git add -A . && npm run lint"
     },
     "dependencies": {
         "@radix-ui/react-slot": "^1.0.2",
